--- a/src/App.css
+++ b/src/App.css
@@ -50,3 +50,34 @@ h2 {
   text-align: center;
   margin: 0.5rem;
 }
+
+.container {
+  background-color: var(--color2);
+  border-radius: 15px;
+  padding: 0.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.container img {
+  max-width: auto;
+  max-height: 75px;
+}
+
+.container p {
+  font-size: small;
+  text-align: left;
+  list-style-position: inside;
+  width: 85px;
+  height: 100px;
+}
+
+.container:hover {
+  box-shadow: 0 0 8px var(--color5);
+  cursor: pointer;
+}
+.container:hover img {
+  transform: scale(1.2);
+  transition: all 0.5s;
+}
